--- a/MdevconUniversal.Common/MdevconUniversal.Common.csproj
+++ b/MdevconUniversal.Common/MdevconUniversal.Common.csproj
@@ -38,9 +38,11 @@
     <TargetPlatform Include="Windows, Version=8.1" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\ILogger.cs" />
     <Compile Include="Domain\Lecture.cs" />
     <Compile Include="Contracts\ILectureManager.cs" />
     <Compile Include="Domain\LectureSpeaker.cs" />
+    <Compile Include="Logger\DebugLogger.cs" />
     <Compile Include="MdevconService\DTOs\Beacon.cs" />
     <Compile Include="MdevconService\DTOs\Rooms.cs" />
     <Compile Include="MdevconService\DTOs\RootObject.cs" />
